--- a/scss/sections/_s_eventos.scss
+++ b/scss/sections/_s_eventos.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    box-shadow: 1px 1px 5px 3px #51515125;
+    box-shadow: 1px 1px 5px 3px $blackish;
     border-radius: 8px;
     padding: 20px;
     margin: 0px 30px 30px 0px;
@@ -27,7 +27,7 @@
 }
 
 .subinfo {
-    color: grey;
+    color: $grey_m;
     font-size: 20px;
 }
 
@@ -43,8 +43,8 @@
 }
 
 
-/* MEDIA QUERIES */
-/* Media Queries - Eventos */
+// MEDIA QUERIES
+// Media Queries - Eventos
 @media (max-width: 900px) {
     .eventos-proximos_section {
         grid-template-columns: repeat(2, 1fr);
