--- a/scss/sections/_s_index.scss
+++ b/scss/sections/_s_index.scss
@@ -9,15 +9,15 @@
     background-position: center;
 }
 
-button {
+.home_button {
     color: white;
     border: solid 1px white;
-    background-color: #00000025;
+    background-color: $blackish;
     border-radius: 10px;
     padding: 10px 30PX;
     font-weight: 600;
 }
 
-button:hover {
-    background-color: rgba(255, 255, 255, 0.074);
+.home_button:hover {
+    background-color: $whitetranspa;
 }
