Estructura SCSS 3 (final)

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: font-titles;
+  font-family: font-main;
   src: url("../resources/fonts/Barlow-Regular.ttf"); }
 
 * {
@@ -9,10 +9,21 @@
 
 h1,
 h2 {
-  font-family: font-titles, serif; }
+  font-family: font-main, serif; }
 
 main {
   padding: 60px; }
+
+button {
+  color: white;
+  border: none;
+  background-color: #005cb3;
+  border-radius: 10px;
+  padding: 10px 30PX;
+  font-weight: 600; }
+
+button:hover {
+  background-color: #003f79; }
 
 nav {
   border-bottom: 2px #d8d8d8 solid;
@@ -24,7 +35,7 @@ nav {
       text-transform: uppercase; }
 
 .container-fluid a {
-  font-family: font-titles, serif;
+  font-family: font-main, serif;
   font-weight: 800; }
 
 .navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
@@ -33,7 +44,8 @@ nav {
 
 footer {
   font-size: 12px;
-  margin: 20px 20px; }
+  padding: 20px;
+  border-top: 1px solid #d8d8d8; }
 
 .home_main {
   color: white;
@@ -63,73 +75,67 @@ footer {
     .autor_main .autor_div div img {
       width: 400px; }
     .autor_main .autor_div .autor_div_text {
-      padding: 20px;
+      padding: 40px 20px;
       max-width: 650px; }
 
 .trilogia_main {
   background-color: black;
   padding: 60px 60px 80px 60px; }
-
-.trilogia_div {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  flex-wrap: wrap; }
-
-.card {
-  border: none;
-  margin: 20px; }
-
-.card-body {
-  padding: 20px; }
+  .trilogia_main .trilogia_div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap; }
+    .trilogia_main .trilogia_div .card {
+      border: none;
+      margin: 20px; }
+      .trilogia_main .trilogia_div .card .card-body {
+        padding: 20px; }
 
 .card-body h5 {
-  font-family: font-titles, serif;
+  font-family: font-main, serif;
   font-weight: bolder; }
 
-.eventos-proximos_section {
-  display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-columns: repeat(3, 1fr);
-  max-width: 900px; }
-
-.eventos_card {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  box-shadow: 1px 1px 5px 3px #51515125;
-  border-radius: 8px;
-  padding: 20px;
-  margin: 0px 30px 30px 0px;
-  width: 250px; }
-
-.eventos_card h3 {
-  font-family: font-titles, serif;
-  font-weight: 700; }
-
-.eventos_card p {
-  text-align: left;
-  margin-bottom: 0; }
-
-.subinfo {
-  color: #808080;
-  font-size: 20px; }
-
-/* Main Contacto */
-.contacto_body {
-  display: grid;
-  grid-template-columns: 500px 400px; }
-
-.contacto_form {
-  margin-left: 30px; }
+.eventos_main {
+  padding-bottom: 0; }
+  .eventos_main .eventos-prox {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    max-width: 900px;
+    margin-top: 40px; }
+    .eventos_main .eventos-prox .eventos_card {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      box-shadow: 1px 1px 5px 3px #51515125;
+      border-radius: 8px;
+      padding: 20px;
+      margin: 0px 30px 30px 0px;
+      width: 250px; }
+      .eventos_main .eventos-prox .eventos_card h3 {
+        font-family: font-main, serif;
+        font-weight: 700; }
+      .eventos_main .eventos-prox .eventos_card p {
+        text-align: left;
+        margin-bottom: 0; }
+      .eventos_main .eventos-prox .eventos_card .subinfo {
+        color: #808080;
+        font-size: 20px; }
 
 @media (max-width: 900px) {
-  .eventos-proximos_section {
+  .eventos-prox {
     grid-template-columns: repeat(2, 1fr); } }
 
 @media (max-width: 600px) {
-  .eventos-proximos_section {
+  .eventos-prox {
     grid-template-columns: repeat(1, 1fr); } }
+
+.contacto_body {
+  display: grid;
+  grid-template-columns: 500px 400px; }
+  .contacto_body .contacto_form {
+    margin-left: 30px; }
 
 @media (max-width: 960px) {
   .contacto_body {
