--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -12,7 +12,7 @@
 .home_button {
     color: white;
     border: solid 1px white;
-    background-color: $blackish;
+    background-color: $blacktranspa;
     border-radius: 10px;
     padding: 10px 30PX;
     font-weight: 600;
