--- a/scss/sections/_s_autor.scss
+++ b/scss/sections/_s_autor.scss
@@ -11,7 +11,7 @@
         }
 
         .autor_div_text {
-            padding: 20px;
+            padding: 40px 20px;
             max-width: 650px;
         }
     }
