--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,7 +3,7 @@
 @import "./utilities/reset";
 @import "./sections/clases_globales";
 @import "./sections/headeryfooter";
-@import "./sections/_s_index";
+@import "./sections/_index";
 @import "./sections/_s_autor";
 @import "./sections/_s_trilogia";
 @import "./sections/_s_eventos";
