--- a/scss/sections/_clases_globales.scss
+++ b/scss/sections/_clases_globales.scss
@@ -1,8 +1,21 @@
 h1,
 h2 {
-    font-family: font-titles, serif;
+    font-family: font-main, serif;
 }
 
 main {
     padding: 60px;
+}
+
+button {
+    color: white;
+    border: none;
+    background-color: $maincolor;
+    border-radius: 10px;
+    padding: 10px 30PX;
+    font-weight: 600;
+}
+
+button:hover {
+    background-color: $maincolordark;
 }
