--- a/scss/sections/_s_eventos.scss
+++ b/scss/sections/_s_eventos.scss
@@ -1,71 +1,50 @@
-.eventos-proximos_section {
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(3, 1fr);
-    max-width: 900px;
+.eventos_main {
+    padding-bottom: 0;
+
+    .eventos-prox {
+        display: grid;
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: repeat(3, 1fr);
+        max-width: 900px;
+        margin-top: 40px;
+
+        .eventos_card {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            box-shadow: 1px 1px 5px 3px $blacktranspa;
+            border-radius: 8px;
+            padding: 20px;
+            margin: 0px 30px 30px 0px;
+            width: 250px;
+
+            h3 {
+                font-family: font-main, serif;
+                font-weight: 700;
+            }
+
+            p {
+                text-align: left;
+                margin-bottom: 0;
+            }
+
+            .subinfo {
+                color: $grey_m;
+                font-size: 20px;
+            }
+        }
+    }
 }
 
-.eventos_card {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    box-shadow: 1px 1px 5px 3px $blackish;
-    border-radius: 8px;
-    padding: 20px;
-    margin: 0px 30px 30px 0px;
-    width: 250px;
-}
-
-.eventos_card h3 {
-    font-family: font-titles, serif;
-    font-weight: 700;
-}
-
-.eventos_card p {
-    text-align: left;
-    margin-bottom: 0;
-}
-
-.subinfo {
-    color: $grey_m;
-    font-size: 20px;
-}
-
-
-/* Main Contacto */
-.contacto_body {
-    display: grid;
-    grid-template-columns: 500px 400px;
-}
-
-.contacto_form{
-    margin-left: 30px;
-}
-
-
-// MEDIA QUERIES
-// Media Queries - Eventos
+// Media Queries
 @media (max-width: 900px) {
-    .eventos-proximos_section {
+    .eventos-prox {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media (max-width: 600px) {
-    .eventos-proximos_section {
+    .eventos-prox {
         grid-template-columns: repeat(1, 1fr);
-    }
-}
-
-@media (max-width: 960px) {
-.contacto_body {
-    grid-template-columns: 1fr;
-    }
-}
-
-@media (max-width: 960px) {
-.contacto_form{
-    margin-left: 0px;
-    max-width: 400px;
     }
 }
