--- a/scss/sections/_s_trilogia.scss
+++ b/scss/sections/_s_trilogia.scss
@@ -1,25 +1,31 @@
 .trilogia_main {
     background-color: black;
     padding: 60px 60px 80px 60px;
+
+    .trilogia_div {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+    
+        .card {
+            border: none;
+            margin: 20px;
+
+            .card-body {
+                padding: 20px;
+            }
+        }
+    }
 }
 
-.trilogia_div {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
 
-.card {
-    border: none;
-    margin: 20px
-}
 
-.card-body {
-    padding: 20px;
-}
+
+
+
 
 .card-body h5 {
-    font-family: font-titles, serif;
+    font-family: font-main, serif;
     font-weight: bolder;
 }
