--- a/scss/utilities/_colors.scss
+++ b/scss/utilities/_colors.scss
@@ -1,5 +1,6 @@
-$whitish: rgb(216, 216, 216);
-$blackish: #51515125;
 $maincolor: #005cb3;
+$maincolordark: #003f79;
+$whitish: rgb(216, 216, 216);
 $grey_m: #808080;
 $whitetranspa: rgba(255, 255, 255, 0.074);
+$blacktranspa: #51515125;
