--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 @import "./utilities/colors";
 @import "./utilities/fonts";
 @import "./utilities/reset";
+@import "./sections/animation";
 @import "./sections/clases_globales";
 @import "./sections/headeryfooter";
 @import "./sections/_index";
@@ -8,3 +9,5 @@
 @import "./sections/_s_trilogia";
 @import "./sections/_s_eventos";
 @import "./sections/_s_contacto";
+
+// npm run watch-css
