--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -7,17 +7,18 @@
     background-image: url('../resources/space2.jpg');
     background-size: cover;
     background-position: center;
+
+    .home_button {
+        color: white;
+        border: solid 1px white;
+        background-color: $blacktranspa;
+        border-radius: 10px;
+        padding: 10px 30PX;
+        font-weight: 600;
+
+        &:hover {
+            background-color: $whitetranspa;
+        }
+    }
 }
 
-.home_button {
-    color: white;
-    border: solid 1px white;
-    background-color: $blacktranspa;
-    border-radius: 10px;
-    padding: 10px 30PX;
-    font-weight: 600;
-}
-
-.home_button:hover {
-    background-color: $whitetranspa;
-}
