--- a/scss/sections/_clases_globales.scss
+++ b/scss/sections/_clases_globales.scss
@@ -14,8 +14,9 @@ button {
     border-radius: 10px;
     padding: 10px 30PX;
     font-weight: 600;
+
+    &:hover {
+        background-color: $maincolordark;
+    }
 }
 
-button:hover {
-    background-color: $maincolordark;
-}
