--- a/scss/sections/_headeryfooter.scss
+++ b/scss/sections/_headeryfooter.scss
@@ -3,31 +3,29 @@ nav {
     border-bottom: 2px $whitish solid;
     padding: 0px 40px !important;
 
-    li {
-        margin: 20px;
-        font-size: 18px;
-
+    .container-fluid {
         a {
-            text-transform: uppercase;
+            font-family: font-main, serif;
+            font-weight: 800;
+        }
+
+        .navbar-nav {
+            li {
+                margin: 20px;
+                font-size: 18px;
+
+                .nav-link {
+                    text-transform: uppercase;
+                }
+
+                .nav-link.active {
+                    color: $maincolor;
+                }
+            }
         }
     }
 }
 
-
-.container-fluid {
-    a {
-        font-family: font-main, serif;
-        font-weight: 800;
-    }
-}
-
-.navbar-nav {
-
-    .nav-link.active, .nav-link.show {
-        color: $maincolor;
-        font-size: 18px;
-    }
-}
 
 // FOOTER
 footer {
